--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "cargo-tag"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["Samuel Hicks <SamMHicks@hotmail.co.uk>"]
 edition = "2018"
+description = "A tool which tags the latest commit with version numbers if the version has changed in Cargo.toml"
+readme = "README.md"
+repository = "https://github.com/sammhicks/cargo-tag"
+license = "MIT"
+keywords = ["cargo", "git"]
+categories = ["development-tools::cargo-plugins"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
